# gol-dist-rs-cw

./: Cargo.toml  README.md
broker/: Cargo.toml
broker/src/: broker_error.rs  jobs.rs  main.rs
controller/: Cargo.toml  build.rs
controller/benches/: bench.rs
controller/src/: args.rs  main.rs
controller/src/gol/: distributor.rs  distributor_error.rs  helpers.rs  mod.rs
controller/tests/: count_test.rs  gol_test.rs  pgm_test.rs  sdl_test.rs  utils.rs
proto/: stub.proto
protocol/: Cargo.toml  protocol.md
protocol/src/: cell.rs  coordinates.rs  function_call.rs  packet.rs
rpc/: Cargo.toml
rpc/src/: generic_rpc.rs  rpc.rs
server/: Cargo.toml
server/src/: main.rs
server/src/util/: mod.rs  traits.rs
src/gol/: distributor.rs  mod.rs  worker.rs
stubs/: Cargo.toml
stubs/src/: lib.rs
worker/: Cargo.toml
worker/src/: main.rs  worker_error.rs
